--- a/.travis.yml
+++ b/.travis.yml
@@ -37,16 +37,16 @@ before_install:
     libqt5x11extras5-dev libqt5designer5 libxapian-dev qttools5-dev
     rapidjson-dev ;
     fi
-  - if [ $TRAVIS_OS_NAME == osx ]; then
-    # TODO brew update # might be automatic
-    test -d /usr/local/opt/qt5/lib       || { rmdir /usr/local/opt/qt5; brew install qt5 ;  brew link --force qt5; }
-    test -d /usr/local/opt/openssl/lib   || { rmdir /usr/local/opt/openssl; brew install openssl; }
-    test -d /usr/local/opt/miniupnpc/lib || { rmdir /usr/local/opt/miniupnpc; brew install miniupnpc; }
-    test -d /usr/local/opt/rapidjson/lib || { rmdir /usr/local/opt/rapidjson; brew install rapidjson; }
-    test -d /usr/local/opt/sqlcipher/lib || { rmdir /usr/local/opt/sqlcipher; brew install sqlcipher; }
-    test -d /usr/local/opt/p7zip/lib     || { rmdir /usr/local/opt/p7zip; brew install p7zip; }
-    npm install -g appdmg ;
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew update ; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew install qt5; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew link --force qt5 ; fi
+  - >
+    if [ $TRAVIS_OS_NAME == osx ]; then
+    brew install openssl miniupnpc rapidjson sqlcipher;
     fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew install p7zip; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then npm install -g appdmg; fi
+
 
 env:
   global:
